# VibeGravityKit

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.agent/skills/knowledge-guide/: SKILL.md
.agent/skills/meta-thinker/: SKILL.md
.agent/skills/meta-thinker/data/: brainstorm_frameworks.json  feature_ideas.json  industry_database.json  monetization_models.json  platform_guide.json  product_archetypes.json
.agent/skills/meta-thinker/scripts/: idea_engine.py
.agent/workflows/: knowledge-guide.md  leader.md  meta-thinker.md
.github/workflows/: publish.yml
GravityKit/: __init__.py  cli.py  skills_index.json
GravityKit/.agent/workflows/: cloud-deployer.md  deep-researcher.md  devops.md  doc-writer.md  image-creator.md  meta-thinker.md  mobile-dev.md  n8n-automator.md  nocobase-plugin-build.md  nocobase-plugin-expert.md  prompt-engineer.md  quality-guardian.md  release-manager.md  research-analyst.md  researcher.md  seo-specialist.md  translator.md
GravityKit/data/: workflows.json
GravityKit/ide-adapters/cline/: knowledge-guide.md  meta-thinker.md  security-engineer.md  tech-writer.md
GravityKit/ide-adapters/cursor/: architect.mdc  backend-dev.mdc  designer.mdc  devops.mdc  frontend-dev.mdc  knowledge-guide.mdc  leader.mdc  meta-thinker.mdc  mobile-dev.mdc  planner.mdc  qa-engineer.mdc  security-engineer.mdc  seo-specialist.mdc  tech-writer.mdc
GravityKit/ide-adapters/windsurf/: architect.md  backend-dev.md  designer.md  devops.md  frontend-dev.md  knowledge-guide.md  leader.md  meta-thinker.md  mobile-dev.md  planner.md  qa-engineer.md  security-engineer.md  seo-specialist.md  tech-writer.md
GravityKit/scripts/: build-catalog.js  generate_adapters.py  generate_index.py  skills_manager.py  validate_skills.py
VibeGravityKit/: cli.py
VibeGravityKit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
VibeGravityKit/.agent/brain/: agent_index.json
VibeGravityKit/.agent/workflows/: leader.md
(+34 files in other folders)
